--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">yeomanExample Yefry</a>
+            <a class="navbar-brand" href="#/">Ubicame UdeA</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
